--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
     <div class="hero-section">
       <div class="top-heading">
-        <h1>Fried Chips Cake</h1>
+        <h1>Deep Fried Chips</h1>
       </div>
       <div class="bottom-heading">
         <h3>Always Blustful</h3>
